# anndata2ri

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yml  .travis.yml  README.rst  anndata2ri.py  biome.jsonc  demo.ipynb  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: deploy.yml  run_tests.yml
anndata2ri/: __init__.py  conv.py  conv_name.py  py2r.py  r2py.py  rpy2_ext.py  test_utils.py
anndata2ri/scipy2ri/: __init__.py  conv.py  py2r.py  r2py.py  support.py
docs/: Makefile  conf.py  index.rst
docs/_static/css/: custom.css
docs/_templates/: toggle-secondary-sidebar.html
docs/_templates/autosummary/: modules.rst
docs/ext/: r_links.py
src/anndata2ri/: __init__.py  _conv.py  _conv_name.py  _ipython.py  _py2r.py  _r2py.py  _rpy2_ext.py  conv.py  conv_name.py  py2r.py  r2py.py  rpy2_ext.py  test_utils.py
src/anndata2ri/scipy2ri/: __init__.py  _conv.py  _py2r.py  _py2r_helpers.r  _r2py.py  _support.py  conv.py  py2r.py  r2py.py  support.py
tests/: conftest.py  test_py2rpy.py  test_rpy2py.py  test_scipy_py2rpy.py  test_scipy_rpy2py.py
